<resources>
    <string name="app_name">YOGA WORKOUT</string>
    <string name="ads_native_uid" translatable="false">ca-app-pub-8270459186680862/9658546795</string>
    <string name="ads_inter_uid" translatable="false">ca-app-pub-8270459186680862/2371578556</string>
    <string name="ads_banner_uid" translatable="false">ca-app-pub-8270459186680862/4961055207</string>
    <string name="facebook_app_id" translatable="false">377535383591585</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb377535383591585</string>
    <string name="instagram_app_id" translatable="false">364423328163324</string>
    <string name="instagram_secure_id" translatable="false">6c129322518270cadbb2701e279fcc16</string>
    <string name="yookassa_id_magazine" translatable="false">776283</string>
    <string name="yookassa_api_key" translatable="false">live_78X5ia1xp4quZdfLV67jSbyp5TgPk3DEpFdDXjRCCaI</string>
    <string name="yookassa_sdk_key" translatable="false">live_Nzc2MjgzR2lAM1Gh5j-sBtKgLhfhg-YWqdnf-CWDEM0</string>
    <string name="add">Add to</string>
    <string name="start" translatable="false">Start</string>
    <string name="end">BRAVO!</string>
    <string name="yoga_workout" translatable="false">YOGA WORKOUT</string>
    <string name="time_workout">Training time</string>
    <string name="time_asana">Asana time</string>
    <string name="toolbar_title">Settings</string>
    <string name="coffee">Coffee</string>
    <string name="start_action">Start</string>
    <string name="stop_action">Stop</string>
    <string name="congratulation">BRAVO!  Workout is over</string>
    <string name="User">Name</string>
    <string name="ID">id</string>
    <string name="email">email</string>
    <string name="status">status</string>
    <string name="e_mail" translatable="false">E-Mail</string>
    <string name="password">Password</string>
    <string name="sign_in">To come in</string>
    <string name="code">The code</string>
    <string name="phone">Phone</string>
    <string name="send_code">Send code</string>
    <string name="or_sign_in">or login with</string>
    <string name="without_sign_in">Login without registration</string>
    <string name="c_google">Login with Google</string>
    <string name="or">or</string>
    <string name="e_mail_sign_in">Registration via E-Mail</string>
    <string name="add_dyh">You must turn on breathing</string>
    <string name="setting_theme">Settings theme</string>
    <string name="setting_time">Settings time</string>
    <string name="statistic">Statistics</string>
    <string name="all_count_asana">Asanas:</string>
    <string name="dyh">Breath</string>
    <string name="add_shava">"It is necessary to add the final asana. "</string>
    <string name="shava_id" translatable="false">asuna09</string>
    <string name="edit_profile">Editing</string>
    <string name="save_edit">Save</string>
    <string name="open_asana_title">Warming up asanas</string>
    <string name="long_description">Full description</string>
    <string name="short_description">Short description</string>
    <string name="title_placeholder">TItle</string>
    <string name="general_attitude">General attitude</string>
    <string name="workout_title">Workout</string>
    <string name="end_workout">End of workout</string>
    <string name="confirm_workout_end">Are you sure you want to end your workout? Statistics will not be saved!</string>
    <string name="ending">To complete</string>
    <string name="no">No</string>
    <string name="additional_asana_title">Adding an asana</string>
    <string name="confirm_adational_asana">Are you sure you want to finish editing?</string>
    <string name="put_all_fields">Fill in all the fields</string>
    <string name="confirm_end_addition">Are you sure you want to complete the addition?</string>
    <string name="end_adidition">Completion of adding asana</string>
    <string name="open">Open</string>
    <string name="error_upload">Upload image failed.</string>
    <string name="error_connection">No connection</string>
    <string name="internet_on">Turn on the internet and try again!</string>
    <string name="do_on">Enable</string>
    <string name="reload">Update</string>
    <string name="main">The main</string>
    <string name="breath">Breath</string>
    <string name="end_action">Conclusion</string>
    <string name="delete_asana">Asana removed</string>
    <string name="asuna_addition">Asana added</string>
    <string name="auth_fail">Authentication failed.</string>
    <string name="favorite_asana">Favorite asanas</string>
    <string name="all_additional">All asunas added to the list of performed asanas</string>
    <string name="setting_profile">Profile settings</string>
    <string name="off_title">Disconnection</string>
    <string name="confirm_off_breath">Are you sure you want to stop breathing? You will lose level 1!</string>
    <string name="confirm_title">I confirm!</string>
    <string name="cancel_title">Cancel</string>
    <string name="confirm_end_asana_off">Are you sure you want to disable the closing asana? You will lose level 1!</string>
    <string name="newer">Newbie</string>
    <string name="middle">Middle</string>
    <string name="profi">Professional</string>
    <string name="choose_image">Select images</string>
    <string name="reload_web">Call forwarding....</string>
    <string name="points" translatable="false">...</string>
    <string name="percent" translatable="false">0 %</string>
    <string name="rubles" translatable="false">0 ₽</string>
    <string name="price_low_1" translatable="false">1600.00 ₽</string>
    <string name="price_2" translatable="false">2000.00 ₽</string>
    <string name="price_3" translatable="false">5000.00 ₽</string>
    <string name="use_promo">To use</string>
    <string name="promocode_title">Your private code</string>
    <string name="payment_error">Payment error</string>
    <string name="success_pay">Payment success</string>
    <string name="error_data">Data is empty</string>
    <string name="login_via_google">Login via Google</string>
    <string name="enlist_action">Enlist to occupation</string>
    <string name="check_load">Check...</string>
    <string name="buy_btn">Buy</string>
    <string name="pay_fragment_title">Purchases</string>
    <string name="promo_title_before">You have not used the promo code yet</string>
    <string name="promo_title_after">You have already used the promo code</string>
    <string name="title_item">Yoga without borders</string>
    <string name="promo_caps">PROMOCODE</string>
    <string name="your_sale">Your sale</string>
    <string name="your_balance">Your balance</string>
    <string name="registration">Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="price_1">1600.00 ₽ / month</string>
    <string name="message_payment_2">You have successfully paid for the seminar.</string>
    <string name="payment_desc">8 online yoga classes with an instructor</string>
    <string name="message_payment_course">You have purchased a yoga course. You will be contacted shortly.</string>
    <string name="buy_seminar">Pay for the seminar</string>
    <string name="start_lesson_3">Classes start: 8:00, 21:00</string>
    <string name="price_lesson_2">Lesson cost: 625.00 ₽</string>
    <string name="count_lesson_3">Number of lessons: 8</string>
    <string name="count_lesson">Number of lessons: 8</string>
    <string name="start_lesson">Classes start: 6:00, 21:00</string>
    <string name="price_one_1">Lesson cost: 200.00 ₽</string>
    <string name="length_lesson_2">Duration of the lesson: 1.5 hours</string>
    <string name="start_lesson_2">Start of classes: To be agreed</string>
    <string name="count_invite">Number of invited friends</string>
    <string name="title_item_individ">Individual video course on yoga</string>
    <string name="time_workout">Training time</string>
</resources>