<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayoutOpen"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/addTitleOpen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/title_placeholder"
        android:inputType="textPersonName" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/addedImageOpen"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp">

    </androidx.viewpager2.widget.ViewPager2>

    <ImageButton
        android:id="@+id/addImageOpen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <EditText
        android:id="@+id/addShortAsunsOpen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/short_description"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/addLongAsunsOpen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/long_description"
        android:inputType="textMultiLine" />

</LinearLayout>